Bug fix on mobile layout

--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@
     text-align: center;
 }
 
+@media only screen and (max-width: 767px)
+{
+    .numbers
+    {
+        margin-right: 1.5rem;
+    }
+}
 .numbers
 {
     color: hsl(0, 0%, 100%);
